Update API client and schemas from server definition
